tests/baselines/reference/recursiveMods.errors.txt
tests/cases/compiler/recursiveMods.ts(9,3): error TS7027: Unreachable code detected.


==== tests/cases/compiler/recursiveMods.ts (1 errors) ====
    export module Foo {
    	export class C {}
    }
    
    export module Foo {
    
    	function Bar() : C {
    		if (true) { return Bar();}
    		return new C();
    		~~~~~~
!!! error TS7027: Unreachable code detected.
    	}
    
    	function Baz() : C {
    		var c = Baz();
    		return Bar();
    	}
    
    	function Gar() {
    		var c : C = Baz();
    		return;
    	}
    	
    }
    